# PerlinNoiseNEA

./: .gitignore  CMakeLists.txt
include/: camera.h  shader.h
include/glad/: glad.h
src/: camera.h  cube.h  glad.c  main.cpp  t.txt  timeCycle.h
